interfaz corregida, interfaz filtro, responsive

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-*{
+* {
     padding: 0%;
     margin: 0%;
     box-sizing: border-box;
@@ -9,12 +9,11 @@
     text-decoration: none;
 }
 
-body{
-
-    background-image: linear-gradient(
-        0deg,
-        rgba(0, 0, 0, 0.8),rgba(0, 0, 0, 0.8)
-    ),url("/assets/fondoNetflix.png");
+body {
+    background-image: linear-gradient(0deg,
+            rgba(0, 0, 0, 0.875),
+            rgba(0, 0, 0, 0.504))
+            ,url("/assets/fondoNetflix.png");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -25,7 +24,7 @@ body{
     justify-content: center;
 }
 
-.cont{
+.cont {
     width: 40%;
     height: 500px;
     border-radius: 20px;
@@ -36,22 +35,23 @@ body{
     background-color: transparent;
     backdrop-filter: blur(70px);
     border: solid 2px white;
+    transition: all .2s ease;
 }
 
-.cont h1{
+.cont h1 {
     color: white;
     font-weight: 900;
     font-size: 50px;
 }
 
-.cont p{
+.cont p {
     color: white;
     font-size: 13px;
     margin-top: -.5rem;
     margin-bottom: 2rem;
 }
 
-.cont h3{
+.cont h3 {
     color: white;
     font-size: 13px;
     margin-top: -.5rem;
@@ -59,7 +59,35 @@ body{
     font-weight: 400;
 }
 
-.cont .input{
+.cont .input i {
+    font-size: 12px;
+}
+
+.cont .input i#eye {
+    font-size: 15px;
+    position: relative;
+    cursor: pointer;
+}
+
+.cont .input i#eye::after {
+    content: '';
+    position: absolute;
+    top: 7px;
+    left: -2px;
+    display: block;
+    width: 20px;
+    height: 1.2px;
+    background-color: rgb(0, 0, 0);
+    transform: rotate(45deg);
+    transition: all .2s ease;
+}
+
+.cont .input i#eye.active::after {
+    top: 0;
+    width: 0;
+}
+
+.cont .input {
     width: 80%;
     background-color: white;
     display: flex;
@@ -69,14 +97,14 @@ body{
     margin-bottom: .5rem;
 }
 
-.cont .input input{
+.cont .input input {
     width: 100%;
     padding: 1rem 1rem 1rem .5rem;
     border: none;
     outline: none;
 }
 
-.ups{
+.ups {
     width: 80%;
     margin-top: 2rem;
     text-align: center;
@@ -84,11 +112,11 @@ body{
     cursor: pointer;
 }
 
-.cont button{
+.cont button {
     width: 50%;
     padding: .8rem 2rem;
     border-radius: 10px;
-    font-size: 15px;
+    font-size: 13px;
     cursor: pointer;
     background-color: white;
     border: solid 2px white;
@@ -97,8 +125,57 @@ body{
     transition: all .2s ease;
 }
 
-.cont button:hover{
+.cont button:hover {
     background-color: transparent;
     color: white;
 }
 
+@media (height < 534px) {
+    body {
+        display: flex;
+        align-items: start;
+        height: 100%;
+    }
+
+    .cont {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
+}
+
+@media (width < 1100px) {
+    .cont {
+        width: 60%;
+    }
+}
+
+@media (width < 800px) {
+    .cont {
+        width: 80%;
+    }
+}
+
+@media (width < 600px) {
+    .cont {
+        width: 90%;
+    }
+}
+
+@media (width < 500px) {
+    .cont h1 {
+        font-size: 30px;
+    }
+
+    .cont p {
+        margin-top: 0;
+        margin-bottom: 2rem;
+    }
+
+    .cont .input {
+        width: 90%;
+    }
+
+    .cont button {
+        width: 60%;
+    }
+}
