--- a/styles/index.css
+++ b/styles/index.css
@@ -10,6 +10,12 @@
 }
 
 body {
+    background-image:  linear-gradient(
+        0deg,
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+    )
+    ,url("/assets/fondoNetflix.png");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
