fondo login mas oscuro

--- a/views/inside.html
+++ b/views/inside.html
@@ -68,7 +68,7 @@
                     </label>
                     <p>Dark Mode</p>
                 </div>
-                <div class="module">
+                <div class="module" id="out">
                     <i class="fa-solid fa-right-from-bracket"></i>
                     <p>Cerrar sesión</p>
                 </div>
