--- a/styles/index.css
+++ b/styles/index.css
@@ -12,8 +12,8 @@
 body {
     background-image:  linear-gradient(
         0deg,
-        rgba(0,0,0,0.5),
-        rgba(0,0,0,0.5)
+        rgba(0, 0, 0, 0.8),
+        rgba(0,0,0,0.7)
     )
     ,url("/assets/fondoNetflix.png");
     background-repeat: no-repeat;
