--- a/views/inside.html
+++ b/views/inside.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="module">
                     <label class="theme-switch">
-                        <input type="checkbox" class="theme-switch__checkbox">
+                        <input placeholder="dfghj" type="checkbox" class="theme-switch__checkbox">
                         <div class="theme-switch__container">
                             <div class="theme-switch__clouds"></div>
                             <div class="theme-switch__stars-container">
@@ -114,7 +114,8 @@
                         </div>
                     </th>
                     <th>
-                        <p class="activo">Activo</p>
+                        <p id="estado" class="activo">Activo</p>
+
                     </th>
                 </tr>
                 <tr>
@@ -127,7 +128,7 @@
                         </div>
                     </th>
                     <th>
-                        <p class="activo">Activo</p>
+                        <p id="estado" class="activo">Activo</p>
                     </th>
                 </tr>
                 <tr>
@@ -143,7 +144,7 @@
                         </div>
                     </th>
                     <th>
-                        <p class="activo">Activo</p>
+                        <p id="estado" class="activo">Activo</p>
                     </th>
                 </tr>
                 <tr>
@@ -157,7 +158,7 @@
                         </div>
                     </th>
                     <th>
-                        <p class="activo">Activo</p>
+                        <p id="estado" class="activo">Activo</p>
                     </th>
                 </tr>
                 <tr>
@@ -170,12 +171,14 @@
                         </div>
                     </th>
                     <th>
-                        <p class="activo">Activo</p>
+                        <p id="estado" class="activo">Activo</p>
                     </th>
                 </tr>
             </tbody>
         </table>
     </div>
+
+
 
     <div class="filtro">
         <div class="content-filtro">
@@ -232,6 +235,8 @@
                 <p id="activo">Activo</p>
                 <p id="inactivo">Inactivo</p>
                 <p id="danado">Dañado</p>
+                <p id="activo">Disponible</p>
+                
             </div>
         </div>
     </div>
