remember password, register y cambio en main menu

--- a/views/inside.html
+++ b/views/inside.html
@@ -29,12 +29,12 @@
                     <p>Servicios</p>
                 </div>
                 <div class="module">
-                    <i class="fa-solid fa-users"></i>
-                    <p>Cuentas</p>
-                </div>
-                <div class="module">
                     <i class="fa-solid fa-user-shield"></i>
                     <p>Personal</p>
+                </div>
+                <div class="module">
+                    <i class="fa-solid fa-credit-card"></i>
+                    <p>Cobros</p>
                 </div>
             </div>
             <hr>
