--- a/views/inside.html
+++ b/views/inside.html
@@ -25,16 +25,16 @@
                     <p>Inicio</p>
                 </div>
                 <div class="module">
+                    <i class="fa-solid fa-credit-card"></i>
+                    <p>Cobros</p>
+                </div>
+                <div class="module">
                     <i class="fa-brands fa-amazon"></i>
                     <p>Servicios</p>
                 </div>
                 <div class="module">
                     <i class="fa-solid fa-user-shield"></i>
                     <p>Personal</p>
-                </div>
-                <div class="module">
-                    <i class="fa-solid fa-credit-card"></i>
-                    <p>Cobros</p>
                 </div>
             </div>
             <hr>
@@ -114,7 +114,7 @@
                         </div>
                     </th>
                     <th>
-                        <p id="estado" class="activo">Activo</p>
+                        <p class="activo">Activo</p>
 
                     </th>
                 </tr>
@@ -128,7 +128,7 @@
                         </div>
                     </th>
                     <th>
-                        <p id="estado" class="activo">Activo</p>
+                        <p class="activo">Activo</p>
                     </th>
                 </tr>
                 <tr>
@@ -144,7 +144,7 @@
                         </div>
                     </th>
                     <th>
-                        <p id="estado" class="activo">Activo</p>
+                        <p class="activo">Activo</p>
                     </th>
                 </tr>
                 <tr>
@@ -158,7 +158,7 @@
                         </div>
                     </th>
                     <th>
-                        <p id="estado" class="activo">Activo</p>
+                        <p class="activo">Activo</p>
                     </th>
                 </tr>
                 <tr>
@@ -235,8 +235,21 @@
                 <p id="activo">Activo</p>
                 <p id="inactivo">Inactivo</p>
                 <p id="danado">Dañado</p>
-                <p id="activo">Disponible</p>
-                
+                <p id="disponible">Disponible</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="change_estado">
+        <div class="content_change-estado">
+            <i class="fa-solid fa-x"></i>
+            <h3>Selecciona el estado: </h3>
+            <div class="p_change-estado">
+                <p id="activo">Activo</p>
+                <p id="inactivo">Inactivo</p>
+                <p id="danado">Dañado</p>
+                <p id="disponible">Disponible</p>
+                <p id="reserva">Reservado</p>
             </div>
         </div>
     </div>
