--- a/views/inside.html
+++ b/views/inside.html
@@ -36,6 +36,10 @@
                     <i class="fa-solid fa-user-shield"></i>
                     <p>Personal</p>
                 </div>
+                <div id="users" class="module">
+                    <i class="fa-solid fa-users"></i>
+                    <p>Usuarios</p>
+                </div>
             </div>
             <hr>
             <div class="bottom_menu">
@@ -223,6 +227,24 @@
                 </div>
                 <div>
                     <img src="/assets/logo_prime.png" alt="" class="prime">
+                </div>
+                <div>
+                    <img src="/assets/logo_crunchyroll.png" alt="" class="crunchyroll">
+                </div>
+                <div>
+                    <img src="/assets/logo_directv.png" alt="" class="directv">
+                </div>
+                <div>
+                    <img src="/assets/logo_disneypremium.png" alt="" class="disneypremium">
+                </div>
+                <div>
+                    <img src="/assets/logo_spotify.jpg" alt="" class="spotify">
+                </div>
+                <div>
+                    <img src="/assets/logo_vix.jpg" alt="" class="vix">
+                </div>
+                <div>
+                    <img src="/assets/logo_youtube.png" alt="" class="youtube">
                 </div>
             </div>
         </div>
