--- a/views/payment.html
+++ b/views/payment.html
@@ -36,6 +36,10 @@
                     <i class="fa-solid fa-user-shield"></i>
                     <p>Personal</p>
                 </div>
+                <div id="users" class="module">
+                    <i class="fa-solid fa-users"></i>
+                    <p>Usuarios</p>
+                </div>
             </div>
             <hr>
             <div class="bottom_menu">
@@ -91,7 +95,7 @@
         </div>
     </div>
     <div class="default">
-        <div class="pay_all">
+        <div class="pay_all" id="payAll">
             <i class="fa-solid fa-wallet fa-bounce"></i>
             <p>Cobrar todos</p>
         </div>
@@ -175,11 +179,56 @@
                         </div>
                     </th>
                     <th>
-                        <p class="inactivo">Cobrar</p>
+                        <p class="inactivo" id="pay">Cobrar</p>
                     </th>
                 </tr>
             </tbody>
         </table>
+    </div>
+
+    <div class="select_service">
+        <div class="content_select-service">
+            <span></span>
+            <h3>Selecciona el servicio: </h3>
+            <div class="img_select-service">
+                <div>
+                    <img src="/assets/logo_disney.jpg" alt="" class="disney">
+                </div>
+                <div>
+                    <img src="/assets/logo_apple.png" alt="" class="apple">
+                </div>
+                <div>
+                    <img src="/assets/logo_hbo.png" alt="" class="hbo">
+                </div>
+                <div>
+                    <img src="/assets/logo_netflix.png" alt="" class="netflix">
+                </div>
+                <div>
+                    <img src="/assets/logo_paramount.png" alt="" class="paramount">
+                </div>
+                <div>
+                    <img src="/assets/logo_prime.png" alt="" class="prime">
+                </div>
+                <div>
+                    <img src="/assets/logo_crunchyroll.png" alt="" class="crunchyroll">
+                </div>
+                <div>
+                    <img src="/assets/logo_directv.png" alt="" class="directv">
+                </div>
+                <div>
+                    <img src="/assets/logo_disneypremium.png" alt="" class="disneypremium">
+                </div>
+                <div>
+                    <img src="/assets/logo_spotify.jpg" alt="" class="spotify">
+                </div>
+                <div>
+                    <img src="/assets/logo_vix.jpg" alt="" class="vix">
+                </div>
+                <div>
+                    <img src="/assets/logo_youtube.png" alt="" class="youtube">
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="/controller/payment.js"></script>
