--- a/styles/inside.css
+++ b/styles/inside.css
@@ -798,7 +798,7 @@ table tbody tr th p.reserva {
     box-shadow: var(--box-shadow);
     border-radius: 20px 20px 0 0;
     width: 400px;
-    height: 300px;
+    height: 450px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -839,12 +839,16 @@ table tbody tr th p.reserva {
 }
 
 .select_service .content_select-service .img_select-service div:nth-child(2),
-.select_service .content_select-service .img_select-service div:nth-child(5) {
+.select_service .content_select-service .img_select-service div:nth-child(5),
+.select_service .content_select-service .img_select-service div:nth-child(8),
+.select_service .content_select-service .img_select-service div:nth-child(11) {
     justify-content: center;
 }
 
 .select_service .content_select-service .img_select-service div:nth-child(1),
-.select_service .content_select-service .img_select-service div:nth-child(4) {
+.select_service .content_select-service .img_select-service div:nth-child(4),
+.select_service .content_select-service .img_select-service div:nth-child(7),
+.select_service .content_select-service .img_select-service div:nth-child(10) {
     justify-content: end;
 }
 
@@ -1138,7 +1142,7 @@ table tbody tr th p.reserva {
 
 @media (width < 500px) {
     .select_service .content_select-service {
-        height: 380px;
+        height: 65vh;
         align-items: center;
         justify-content: start;
     }
