--- a/styles/payment.css
+++ b/styles/payment.css
@@ -323,6 +323,7 @@ body {
     color: var(--color-texto-rojo);
     transition: all .2s ease;
     cursor: pointer;
+    font-size: 13px;
 }
 
 .pay_all:hover{
@@ -629,174 +630,6 @@ table tbody tr th p.reserva {
     transform: translateY(-50%);
 }
 
-#filter {
-    position: fixed;
-    bottom: 30px;
-    right: 30px;
-    width: 60px;
-    height: 60px;
-    background-color: var(--color-linea);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: var(--color-grey);
-    border-radius: 50%;
-    cursor: pointer;
-    transition: all .3s ease;
-}
-
-#filter.active {
-    bottom: 100px;
-}
-
-.filtro {
-    position: fixed;
-    bottom: -500vw;
-    right: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: transparent;
-    transition: all .5s;
-    display: flex;
-    align-items: end;
-    border: none;
-}
-
-.filtro.active {
-    bottom: 0;
-}
-
-.filtro .content-filtro {
-    position: relative;
-    width: 100vw;
-    background-color: var(--color-grey-white);
-    box-shadow: var(--box-shadow);
-}
-
-.filtro .content-filtro i#close_filtro {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    cursor: pointer;
-    color: var(--color-black);
-}
-
-.filtro .content-filtro i#clean_filtro {
-    position: absolute;
-    right: 18px;
-    top: 40px;
-    cursor: pointer;
-    color: var(--color-black);
-}
-
-.filtro .content-filtro .inputs-filtro {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    align-items: center;
-    padding: 1rem 2rem 1rem 7rem;
-    gap: 1rem;
-}
-
-.filtro .content-filtro .inputs-filtro .input:first-child {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-left: 2rem;
-}
-
-.filtro .content-filtro .inputs-filtro .input:first-child i {
-    color: var(--color-black);
-}
-
-.filtro .content-filtro .inputs-filtro .input:first-child input {
-    padding: 1rem 2rem 1rem .7rem;
-    width: 100%;
-    border: none;
-    outline: none;
-    background-color: transparent;
-    color: var(--color-black);
-}
-
-.filtro .content-filtro .inputs-filtro .input:nth-child(2) {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-    cursor: pointer;
-}
-
-.filtro .content-filtro .inputs-filtro .input:nth-child(2) p {
-    font-size: 13px;
-    color: var(--color-black);
-}
-
-.filtro .content-filtro .inputs-filtro .input:nth-child(2) img {
-    aspect-ratio: 1/1;
-    object-fit: cover;
-    width: 45px;
-    border-radius: 50%;
-    cursor: pointer;
-}
-
-.filtro .content-filtro .inputs-filtro .input:last-child {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-left: 5rem;
-    gap: 1rem;
-    margin-right: 1rem;
-}
-
-.filtro .content-filtro .inputs-filtro .input:last-child p {
-    font-size: 13px;
-    color: var(--color-black);
-}
-
-.filtro .content-filtro .inputs-filtro .input:last-child h3 {
-    cursor: pointer;
-}
-
-.filtro .content-filtro .inputs-filtro .input:last-child h3.activo {
-    font-size: 13px;
-    padding: .7rem 2rem;
-    background-color: var(--color-verde);
-    color: var(--color-texto-verde);
-    border-radius: 10px;
-}
-
-.filtro .content-filtro .inputs-filtro .input:last-child h3.inactivo {
-    font-size: 13px;
-    padding: .7rem 2rem;
-    background-color: var(--color-rojo);
-    color: var(--color-texto-rojo);
-    border-radius: 10px;
-}
-
-.filtro .content-filtro .inputs-filtro .input:last-child h3.danado {
-    font-size: 13px;
-    padding: .7rem 2rem;
-    background-color: var(--color-rosa);
-    color: var(--color-texto-rosa);
-    border-radius: 10px;
-}
-
-.filtro .content-filtro .inputs-filtro .input:last-child h3.disponible {
-    font-size: 13px;
-    padding: .7rem 2rem;
-    background-color: var(--color-cielo);
-    color: var(--color-texto-cielo);
-    border-radius: 10px;
-}
-
-.filtro .content-filtro .inputs-filtro .input:last-child h3.search {
-    font-size: 13px;
-    padding: .7rem 2rem;
-    background-color: var(--color-grey);
-    color: var(--color-grey-white);
-    border-radius: 10px;
-}
-
 .select_service {
     position: fixed;
     bottom: -500vw;
@@ -819,7 +652,7 @@ table tbody tr th p.reserva {
     box-shadow: var(--box-shadow);
     border-radius: 20px 20px 0 0;
     width: 400px;
-    height: 300px;
+    height: 450px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -860,12 +693,16 @@ table tbody tr th p.reserva {
 }
 
 .select_service .content_select-service .img_select-service div:nth-child(2),
-.select_service .content_select-service .img_select-service div:nth-child(5) {
+.select_service .content_select-service .img_select-service div:nth-child(5),
+.select_service .content_select-service .img_select-service div:nth-child(8),
+.select_service .content_select-service .img_select-service div:nth-child(11) {
     justify-content: center;
 }
 
 .select_service .content_select-service .img_select-service div:nth-child(1),
-.select_service .content_select-service .img_select-service div:nth-child(4) {
+.select_service .content_select-service .img_select-service div:nth-child(4),
+.select_service .content_select-service .img_select-service div:nth-child(7),
+.select_service .content_select-service .img_select-service div:nth-child(10) {
     justify-content: end;
 }
 
@@ -882,185 +719,6 @@ table tbody tr th p.reserva {
     border-radius: 20%;
 }
 
-.select_estado {
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    bottom: -500vw;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: end;
-    background-color: transparent;
-    transition: all .5s ease;
-}
-
-.select_estado.active {
-    bottom: 0;
-}
-
-.select_estado .content_select-estado {
-    width: 400px;
-    height: 170px;
-    background-color: var(--color-grey-white);
-    box-shadow: var(--box-shadow);
-    border-radius: 20px 20px 0 0;
-    position: relative;
-    display: flex;
-    align-items: end;
-    justify-content: center;
-}
-
-.select_estado .content_select-estado span {
-    display: block;
-    position: absolute;
-    width: 50px;
-    height: 4px;
-    background-color: var(--color-grey);
-    top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    border-radius: 100px;
-}
-
-.select_estado .content_select-estado .text_select-estado {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: .5rem;
-    margin-bottom: 2rem;
-}
-
-.select_estado .content_select-estado .text_select-estado p {
-    padding: 1rem 2rem;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-}
-
-.select_estado .content_select-estado .text_select-estado p#activo {
-    font-size: 13px;
-    font-weight: 800;
-    padding: .7rem 2rem;
-    background-color: var(--color-verde);
-    color: var(--color-texto-verde);
-    border-radius: 10px;
-}
-
-.select_estado .content_select-estado .text_select-estado p#inactivo {
-    font-size: 13px;
-    font-weight: 800;
-    padding: .7rem 2rem;
-    background-color: var(--color-rojo);
-    color: var(--color-texto-rojo);
-    border-radius: 10px;
-}
-
-.select_estado .content_select-estado .text_select-estado p#danado {
-    font-size: 13px;
-    font-weight: 800;
-    padding: .7rem 2rem;
-    background-color: var(--color-rosa);
-    color: var(--color-texto-rosa);
-    border-radius: 10px;
-}
-
-.select_estado .content_select-estado .text_select-estado p#disponible {
-    font-size: 13px;
-    font-weight: 800;
-    padding: .7rem 2rem;
-    background-color: var(--color-cielo);
-    color: var(--color-texto-cielo);
-    border-radius: 10px;
-}
-
-.change_estado {
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    right: -500vw;
-    z-index: 1;
-    display: flex;
-    align-items: start;
-    justify-content: end;
-    border-radius: 20px 0 0 20px;
-    transition: all .5s;
-}
-
-.change_estado.active {
-    right: 0;
-}
-
-.change_estado .content_change-estado {
-    width: 400px;
-    height: 100vh;
-    background-color: var(--color-grey-white);
-    box-shadow: var(--box-shadow);
-    position: relative;
-    padding: 1rem 2rem;
-}
-
-.change_estado .content_change-estado h3 {
-    font-size: 14px;
-    font-weight: 800;
-    margin-bottom: 2rem;
-    margin-top: 1rem;
-    color: var(--color-black);
-}
-
-.change_estado .content_change-estado .p_change-estado {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: .02fr .02fr .02fr .02fr;
-    row-gap: 1rem;
-    column-gap: .5rem;
-}
-
-.change_estado .content_change-estado i {
-    position: absolute;
-    top: 30px;
-    right: 30px;
-    color: var(--color-grey);
-    cursor: pointer;
-}
-
-.change_estado .content_change-estado p {
-    width: 100%;
-    padding: 1rem 2rem;
-    text-align: center;
-    font-size: 14px;
-    font-weight: 800;
-    border-radius: 10px;
-    cursor: pointer;
-}
-
-.change_estado .content_change-estado p:first-child {
-    background-color: var(--color-verde);
-    color: var(--color-texto-verde);
-}
-
-.change_estado .content_change-estado p:nth-child(2) {
-    background-color: var(--color-rojo);
-    color: var(--color-texto-rojo);
-}
-
-.change_estado .content_change-estado p:nth-child(3) {
-    background-color: var(--color-rosa);
-    color: var(--color-texto-rosa);
-}
-
-.change_estado .content_change-estado p:nth-child(4) {
-    background-color: var(--color-cielo);
-    color: var(--color-texto-cielo);
-}
-
-.change_estado .content_change-estado p:nth-child(5) {
-    background-color: var(--color-mora);
-    color: var(--color-texto-mora);
-}
-
 @media (width < 1100px) {
     .default {
         overflow: hidden;
@@ -1069,36 +727,6 @@ table tbody tr th p.reserva {
 
     table tbody tr th p {
         width: 150px;
-    }
-}
-
-@media (width < 800px) {
-    .filtro .content-filtro .inputs-filtro {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-    }
-
-    .filtro .content-filtro .inputs-filtro .input:nth-child(2) {
-        padding: 0 0 0 2rem;
-        justify-content: start;
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: start;
-    }
-
-    .filtro .content-filtro .inputs-filtro .input:last-child {
-        padding: 0 0 0 2rem;
-        justify-content: start;
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: start;
-    }
-
-    #filter.active {
-        bottom: 230px;
     }
 }
 
@@ -1139,43 +767,17 @@ table tbody tr th p.reserva {
     .header .right_header {
         flex-direction: row;
     }
-
-    .filtro .content-filtro .inputs-filtro {
-        padding: 1rem 2rem;
-    }
-
-    .select_service .content_select-service h3 {
-        margin-top: 4rem;
-    }
-
-    .change_estado .content_change-estado h3 {
-        margin-top: 4rem;
-    }
-
-    .change_estado .content_change-estado i {
-        right: 88%;
-    }
 }
 
 @media (width < 500px) {
     .select_service .content_select-service {
-        height: 380px;
+        height: 65vh;
         align-items: center;
         justify-content: start;
     }
 
-    .select_estado .content_select-estado {
-        align-items: start;
-        height: 250px;
-    }
-
-    .select_estado .content_select-estado .text_select-estado {
-        margin-top: 3rem;
-    }
-
-    .change_estado .content_change-estado .p_change-estado {
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(5, 0.2fr);
+    .select_service .content_select-service h3 {
+        margin-top: 4rem;
     }
 }
 
