register users finish

--- a/views/register_users.html
+++ b/views/register_users.html
@@ -28,13 +28,13 @@
 
         <div class="input">
             <i class="fa-brands fa-amazon"></i>
-            <input type="text" class="servicio" id="servicio" placeholder="servicio" autocomplete="off">
+            <input type="text" class="servicio" id="servicio" placeholder="Selecciona el servicio" autocomplete="off" autocapitalize="off">
             <i class="fa-solid fa-trash" id="clean_service"></i>
         </div>
 
         <div class="input">
             <i class="fa-solid fa-earth-americas"></i>
-            <input class="pais" type="text" id="pais" placeholder="pais" autocomplete="off">
+            <input class="pais" type="text" id="pais" placeholder="Selecciona el pais" autocomplete="off">
         </div>
         
         <br>
