--- a/views/register_users.html
+++ b/views/register_users.html
@@ -28,7 +28,7 @@
 
         <div class="input">
             <i class="fa-brands fa-amazon"></i>
-            <input type="text" class="servicio" id="servicio" placeholder="Selecciona el servicio" autocomplete="off" autocapitalize="off">
+            <textarea class="servicio" id="servicio" placeholder="Selecciona el servicio" autocomplete="off"></textarea>
             <i class="fa-solid fa-trash" id="clean_service"></i>
         </div>
 
